#
# $Id$
#

bin_PROGRAMS = ctp2
# This hack shortens include path list,
# but prohibits using a separate build dir
#ctp2_code=..

if WIN32
CTP2_WIN32_FREETYPE_INC=\
	-I$(ctp2_code)/ui/freetype
CTP2_WIN32_MILES_INC=\
	-I$(ctp2_code)/libs/miles
CTP2_WIN32_ZLIB_INC=\
	-I$(ctp2_code)/libs/zlib
endif
CTP2_ANET_INC=-I$(ctp2_code)/libs/anet/h

include $(ctp2_code)/os/autoconf/Makefile.common

ctp2_SOURCES = \
	ctp2_utils/appstrings.cpp \
	ctp2_utils/c3cmdline.cpp \
	ctp2_utils/c3cpu.cpp \
	ctp2_utils/c3debug.cpp \
	ctp2_utils/c3errors.cpp \
	ctp2_utils/c3files.cpp \
	ctp2_utils/c3mem.cpp \
	ctp2_utils/cheatkey.cpp \
	ctp2_utils/ctpregistry.cpp \
	ctp2_utils/ddhelp.cpp \
	ctp2_utils/netconsole.cpp \
	ctp2_utils/tracklen.cpp \
	debugtools/debug.c \
	debugtools/debugassert.cpp \
	debugtools/debugcallstack.cpp \
	debugtools/debugexception.cpp \
	debugtools/debugmemory.cpp \
	debugtools/log.cpp \
	fingerprint/ctp_finger.cpp \
	fingerprint/endecode.c \
	fingerprint/shroud.c \
	fingerprint/verify.c \
	c3.cpp \
	civ3_main.cpp \
	civapp.cpp \
	display.cpp \
	../gfx/spritesys/action.cpp \
	../gfx/spritesys/Actor.cpp \
	../gfx/spritesys/ActorPath.cpp \
	../gfx/spritesys/Anim.cpp \
	../gfx/spritesys/battleviewactor.cpp \
	../gfx/spritesys/EffectActor.cpp \
	../gfx/spritesys/goodactor.cpp \
	../gfx/spritesys/TradeActor.cpp \
	../gfx/spritesys/UnitActor.cpp \
	../gfx/spritesys/workeractor.cpp \
	../gfx/spritesys/CitySpriteGroup.cpp \
	../gfx/spritesys/effectspritegroup.cpp \
	../gfx/spritesys/FacedSprite.cpp \
	../gfx/spritesys/FacedSpriteWshadow.cpp \
	../gfx/spritesys/goodspritegroup.cpp \
	../gfx/spritesys/Sprite.cpp \
	../gfx/spritesys/spritefile.cpp \
	../gfx/spritesys/SpriteGroup.cpp \
	../gfx/spritesys/SpriteGroupList.cpp \
	../gfx/spritesys/SpriteHitTest.cpp \
	../gfx/spritesys/SpriteList.cpp \
	../gfx/spritesys/SpriteLow555.cpp \
	../gfx/spritesys/SpriteLow565.cpp \
	../gfx/spritesys/SpriteState.cpp \
	../gfx/spritesys/SpriteStateDB.cpp \
	../gfx/spritesys/spriteutils.cpp \
	../gfx/spritesys/UnitSpriteGroup.cpp \
	../gfx/spritesys/director.cpp \
	../gfx/spritesys/directorevent.cpp \
	../gfx/spritesys/screenmanager.cpp \
	../gfx/tilesys/maputils.cpp \
	../gfx/tilesys/BaseTile.cpp \
	../gfx/tilesys/resourcemap.cpp \
	../gfx/tilesys/tiledmap.cpp \
	../gfx/tilesys/tiledraw.cpp \
	../gfx/tilesys/tiledrawroad.cpp \
	../gfx/tilesys/TileHighlight.cpp \
	../gfx/tilesys/TileInfo.cpp \
	../gfx/tilesys/tileset.cpp \
	../gfx/tilesys/tileutils.cpp \
	../gfx/gfx_utils/arproces.cpp \
	../gfx/gfx_utils/ColorSet.cpp \
	../gfx/gfx_utils/gfx_options.cpp \
	../gfx/gfx_utils/pixelutils.cpp \
	../gfx/gfx_utils/targautils.cpp \
	../gfx/gfx_utils/tiffutils.cpp \
	../gfx/gfx_utils/videoutils.cpp \
	../gfx/layers/citylayer.cpp \
	../gs/database/CivilisationDB.cpp \
	../gs/database/CivilisationRec.cpp \
	../gs/database/conceptdb.cpp \
	../gs/database/ConstDB.cpp \
	../gs/database/DB.cpp \
	../gs/database/DiffDB.cpp \
	../gs/database/EndGameDB.cpp \
	../gs/database/EndGameRecord.cpp \
	../gs/database/filenamedb.cpp \
	../gs/database/gwdb.cpp \
	../gs/database/GWRecord.cpp \
	../gs/database/highscoredb.cpp \
	../gs/database/InstDB.cpp \
	../gs/database/InstRec.cpp \
	../gs/database/MapDB.cpp \
	../gs/database/MapRecord.cpp \
	../gs/database/moviedb.cpp \
	../gs/database/orderdb.cpp \
	../gs/database/PlayListDB.cpp \
	../gs/database/pollutiondb.cpp \
	../gs/database/PollutionRecord.cpp \
	../gs/database/profileDB.cpp \
	../gs/database/Rec.cpp \
	../gs/database/RiskDB.cpp \
	../gs/database/StrDB.cpp \
	../gs/database/StrRec.cpp \
	../gs/database/thronedb.cpp \
	../gs/database/UVDB.cpp \
	../gs/database/UVRecord.cpp \
	../gs/gameobj/AchievementTracker.cpp \
	../gs/gameobj/Advances.cpp \
	../gs/gameobj/advanceutil.cpp \
	../gs/gameobj/Agreement.cpp \
	../gs/gameobj/AgreementData.cpp \
	../gs/gameobj/AgreementPool.cpp \
	../gs/gameobj/Army.cpp \
	../gs/gameobj/ArmyData.cpp \
	../gs/gameobj/armyevent.cpp \
	../gs/gameobj/ArmyPool.cpp \
	../gs/gameobj/barbarians.cpp \
	../gs/gameobj/bldque.cpp \
	../gs/gameobj/buildingutil.cpp \
	../gs/gameobj/CityData.cpp \
	../gs/gameobj/CityEvent.cpp \
	../gs/gameobj/CityInfluenceIterator.cpp \
	../gs/gameobj/CityRadius.cpp \
	../gs/gameobj/Civilisation.cpp \
	../gs/gameobj/CivilisationData.cpp \
	../gs/gameobj/civilisationpool.cpp \
	../gs/gameobj/combatevent.cpp \
	../gs/gameobj/CriticalMessagesPrefs.cpp \
	../gs/gameobj/CTP2Combat.cpp \
	../gs/gameobj/Diffcly.cpp \
	../gs/gameobj/Diplomacy_Log.cpp \
	../gs/gameobj/DiplomaticRequest.cpp \
	../gs/gameobj/DiplomaticRequestData.cpp \
	../gs/gameobj/DiplomaticRequestPool.cpp \
	../gs/gameobj/EmptyTile.cpp \
	../gs/gameobj/endgame.cpp \
	../gs/gameobj/Events.cpp \
	../gs/gameobj/EventTracker.cpp \
	../gs/gameobj/Exclusions.cpp \
	../gs/gameobj/FeatTracker.cpp \
	../gs/gameobj/gaiacontroller.cpp \
	../gs/gameobj/GameObj.cpp \
	../gs/gameobj/GameSettings.cpp \
	../gs/gameobj/Gold.cpp \
	../gs/gameobj/GoodyHuts.cpp \
	../gs/gameobj/GSLogs.cpp \
	../gs/gameobj/Happy.cpp \
	../gs/gameobj/happytracker.cpp \
	../gs/gameobj/ID.cpp \
	../gs/gameobj/improvementevent.cpp \
	../gs/gameobj/installation.cpp \
	../gs/gameobj/installationdata.cpp \
	../gs/gameobj/installationpool.cpp \
	../gs/gameobj/MaterialPool.cpp \
	../gs/gameobj/Message.cpp \
	../gs/gameobj/messagedata.cpp \
	../gs/gameobj/MessagePool.cpp \
	../gs/gameobj/ObjPool.cpp \
	../gs/gameobj/Order.cpp \
	../gs/gameobj/Player.cpp \
	../gs/gameobj/PlayerAI.cpp \
	../gs/gameobj/PlayerEvent.cpp \
	../gs/gameobj/PlayerTurn.cpp \
	../gs/gameobj/PlayHap.cpp \
	../gs/gameobj/Pollution.cpp \
	../gs/gameobj/Readiness.cpp \
	../gs/gameobj/Regard.cpp \
	../gs/gameobj/Resources.cpp \
	../gs/gameobj/Sci.cpp \
	../gs/gameobj/Score.cpp \
	../gs/gameobj/Strengths.cpp \
	../gs/gameobj/TaxRate.cpp \
	../gs/gameobj/terrainutil.cpp \
	../gs/gameobj/TerrImprove.cpp \
	../gs/gameobj/TerrImproveData.cpp \
	../gs/gameobj/TerrImprovePool.cpp \
	../gs/gameobj/TopTen.cpp \
	../gs/gameobj/TradeBids.cpp \
	../gs/gameobj/tradeevent.cpp \
	../gs/gameobj/TradeOffer.cpp \
	../gs/gameobj/TradeOfferData.cpp \
	../gs/gameobj/TradeOfferPool.cpp \
	../gs/gameobj/TradePool.cpp \
	../gs/gameobj/TradeRoute.cpp \
	../gs/gameobj/TradeRouteData.cpp \
	../gs/gameobj/tradeutil.cpp \
	../gs/gameobj/Unit.cpp \
	../gs/gameobj/UnitData.cpp \
	../gs/gameobj/unitevent.cpp \
	../gs/gameobj/UnitPool.cpp \
	../gs/gameobj/unitutil.cpp \
	../gs/gameobj/Vision.cpp \
	../gs/gameobj/WonderTracker.cpp \
	../gs/gameobj/wonderutil.cpp \
	../gs/gameobj/Wormhole.cpp \
	../gs/gameobj/XY_Coordinates.cpp \
	../gs/utility/AgreementDynArr.cpp \
	../gs/utility/checksum.cpp \
	../gs/utility/CivDynArr.cpp \
	../gs/utility/clock.cpp \
	../gs/utility/DataCheck.cpp \
	../gs/utility/DiplDynArr.cpp \
	../gs/utility/ErrMsg.cpp \
	../gs/utility/gameinit.cpp \
	../gs/utility/MapFile.cpp \
	../gs/utility/MsgDynArr.cpp \
	../gs/utility/newturncount.cpp \
	../gs/utility/RandGen.cpp \
	../gs/utility/stringutils.cpp \
	../gs/utility/TradeDynArr.cpp \
	../gs/utility/TurnCnt.cpp \
	../gs/utility/TurnCntEvent.cpp \
	../gs/utility/UnitDynArr.cpp \
	../gs/world/Cell.cpp \
	../gs/world/cellunitlist.cpp \
	../gs/world/MapPoint.cpp \
	../gs/world/UnseenCell.cpp \
	../gs/world/wldgen.cpp \
	../gs/world/WorldDistance.cpp \
	../gs/world/worldevent.cpp \
	../gs/world/WrldCity.cpp \
	../gs/world/WrldCont.cpp \
	../gs/world/WrldPoll.cpp \
	../gs/world/WrlEnv.cpp \
	../gs/world/WrlImprove.cpp \
	../gs/world/WrlUnit.cpp \
	../gs/fileio/CivPaths.cpp \
	../gs/fileio/civscenarios.cpp \
	../gs/fileio/GameFile.cpp \
	../gs/fileio/prjfile.cpp \
	../gs/fileio/Token.cpp \
	../gs/events/GameEvent.cpp \
	../gs/events/GameEventArgList.cpp \
	../gs/events/GameEventArgument.cpp \
	../gs/events/GameEventDescription.cpp \
	../gs/events/GameEventHook.cpp \
	../gs/events/GameEventManager.cpp \
	../gs/outcom/c3rand.cpp \
	../net/general/net_achievement.cpp \
	../net/general/net_action.cpp \
	../net/general/net_agreement.cpp \
	../net/general/net_army.cpp \
	../net/general/net_cell.cpp \
	../net/general/net_chat.cpp \
	../net/general/net_cheat.cpp \
	../net/general/net_city.cpp \
	../net/general/net_city.h \
	../net/general/net_civ.cpp \
	../net/general/net_crc.cpp \
	../net/general/net_diff.cpp \
	../net/general/net_diplomacy.cpp \
	../net/general/net_endgame.cpp \
	../net/general/net_exclusions.cpp \
	../net/general/net_feat.cpp \
	../net/general/net_gameobj.cpp \
	../net/general/net_gamesettings.cpp \
	../net/general/net_guid.cpp \
	../net/general/net_happy.cpp \
	../net/general/net_info.cpp \
	../net/general/net_installation.cpp \
	../net/general/net_keys.cpp \
	../net/general/net_message.cpp \
	../net/general/net_order.cpp \
	../net/general/net_player.cpp \
	../net/general/net_pollution.cpp \
	../net/general/net_rand.cpp \
	../net/general/net_ready.cpp \
	../net/general/net_report.cpp \
	../net/general/net_research.cpp \
	../net/general/net_strengths.cpp \
	../net/general/net_terrain.cpp \
	../net/general/net_tradeoffer.cpp \
	../net/general/net_traderoute.cpp \
	../net/general/net_unit.cpp \
	../net/general/net_vision.cpp \
	../net/general/net_wonder.cpp \
	../net/general/net_world.cpp \
	../net/general/network.cpp \
	../net/general/networkevent.cpp \
	../net/io/net_anet.cpp \
	../net/io/net_debug.cpp \
	../net/io/net_io.cpp \
	../net/io/net_thread.cpp \
	../robot/utility/RandTest.cpp \
	../robot/utility/roboinit.cpp \
	../robot/pathing/A_Star_Heuristic_Cost.cpp \
	../robot/pathing/astar.cpp \
	../robot/pathing/AstarPnt.cpp \
	../robot/pathing/AVLHeap.cpp \
	../robot/pathing/CityAstar.cpp \
	../robot/pathing/Path.cpp \
	../robot/pathing/RobotAstar.cpp \
	../robot/pathing/robotastar2.cpp \
	../robot/pathing/TradeAstar.cpp \
	../robot/pathing/unitastar.cpp \
	../robot/aibackdoor/bset.cpp \
	../robot/aibackdoor/civarchive.cpp \
	../ui/aui_common/aui_action.cpp \
	../ui/aui_common/aui_animate.cpp \
	../ui/aui_common/aui_audiomanager.cpp \
	../ui/aui_common/aui_base.cpp \
	../ui/aui_common/aui_bitmapfont.cpp \
	../ui/aui_common/aui_blitter.cpp \
	../ui/aui_common/aui_button.cpp \
	../ui/aui_common/aui_control.cpp \
	../ui/aui_common/aui_cursor.cpp \
	../ui/aui_common/aui_dimension.cpp \
	../ui/aui_common/aui_dirtylist.cpp \
	../ui/aui_common/aui_dragdropwindow.cpp \
	../ui/aui_common/aui_dropdown.cpp \
	../ui/aui_common/aui_font.cpp \
	../ui/aui_common/aui_gamespecific.cpp \
	../ui/aui_common/aui_header.cpp \
	../ui/aui_common/aui_hypertextbase.cpp \
	../ui/aui_common/aui_hypertextbox.cpp \
	../ui/aui_common/aui_image.cpp \
	../ui/aui_common/aui_imagebase.cpp \
	../ui/aui_common/aui_imagelist.cpp \
	../ui/aui_common/aui_input.cpp \
	../ui/aui_common/aui_item.cpp \
	../ui/aui_common/aui_joystick.cpp \
	../ui/aui_common/aui_keyboard.cpp \
	../ui/aui_common/aui_ldl.cpp \
	../ui/aui_common/aui_listbox.cpp \
	../ui/aui_common/aui_memmap.cpp \
	../ui/aui_common/aui_mouse.cpp \
	../ui/aui_common/aui_movie.cpp \
	../ui/aui_common/aui_moviebutton.cpp \
	../ui/aui_common/aui_moviemanager.cpp \
	../ui/aui_common/aui_music.cpp \
	../ui/aui_common/aui_pixel.cpp \
	../ui/aui_common/aui_progressbar.cpp \
	../ui/aui_common/aui_radio.cpp \
	../ui/aui_common/aui_ranger.cpp \
	../ui/aui_common/aui_rectangle.cpp \
	../ui/aui_common/aui_region.cpp \
	../ui/aui_common/aui_regiondispatch.cpp \
	../ui/aui_common/aui_screen.cpp \
	../ui/aui_common/aui_shell.cpp \
	../ui/aui_common/aui_sound.cpp \
	../ui/aui_common/aui_soundbase.cpp \
	../ui/aui_common/aui_static.cpp \
	../ui/aui_common/aui_stringtable.cpp \
	../ui/aui_common/aui_surface.cpp \
	../ui/aui_common/aui_switch.cpp \
	../ui/aui_common/aui_switchgroup.cpp \
	../ui/aui_common/aui_tab.cpp \
	../ui/aui_common/aui_tabgroup.cpp \
	../ui/aui_common/aui_textbase.cpp \
	../ui/aui_common/aui_textbox.cpp \
	../ui/aui_common/aui_textfield.cpp \
	../ui/aui_common/aui_thumb.cpp \
	../ui/aui_common/aui_tipwindow.cpp \
	../ui/aui_common/aui_ui.cpp \
	../ui/aui_common/aui_undo.cpp \
	../ui/aui_common/aui_uniqueid.cpp \
	../ui/aui_common/aui_win.cpp \
	../ui/aui_common/aui_window.cpp \
	../ui/aui_common/tech_memmap.cpp \
	../ui/aui_utils/primitives.cpp \
	../ui/aui_utils/textutils.cpp \
	../ui/aui_utils/vidplay.cpp \
	../ui/aui_directx/aui_directaudiomanager.cpp \
	../ui/aui_directx/aui_directblitter.cpp \
	../ui/aui_directx/aui_directinput.cpp \
	../ui/aui_directx/aui_directjoystick.cpp \
	../ui/aui_directx/aui_directkeyboard.cpp \
	../ui/aui_directx/aui_directmouse.cpp \
	../ui/aui_directx/aui_directmovie.cpp \
	../ui/aui_directx/aui_directmoviemanager.cpp \
	../ui/aui_directx/aui_directsound.cpp \
	../ui/aui_directx/aui_directsurface.cpp \
	../ui/aui_directx/aui_directui.cpp \
	../ui/aui_directx/aui_directx.cpp \
	../ui/aui_sdl/aui_sdl.cpp \
	../ui/aui_sdl/aui_sdlinput.cpp \
	../ui/aui_sdl/aui_sdlinput.h \
	../ui/aui_sdl/aui_sdljoystick.cpp \
	../ui/aui_sdl/aui_sdlkeyboard.cpp \
	../ui/aui_sdl/aui_sdlmouse.cpp \
	../ui/aui_sdl/aui_sdlsound.cpp \
	../ui/aui_sdl/aui_sdlsurface.cpp \
	../ui/aui_ctp2/background.cpp \
	../ui/aui_ctp2/battleorderbox.cpp \
	../ui/aui_ctp2/battleorderboxactions.cpp \
	../ui/aui_ctp2/bevellesswindow.cpp \
	../ui/aui_ctp2/buttonbank.cpp \
	../ui/aui_ctp2/c3_button.cpp \
	../ui/aui_ctp2/c3_checkbox.cpp \
	../ui/aui_ctp2/c3_coloredstatic.cpp \
	../ui/aui_ctp2/c3_coloredswitch.cpp \
	../ui/aui_ctp2/c3_coloriconbutton.cpp \
	../ui/aui_ctp2/c3_dropdown.cpp \
	../ui/aui_ctp2/c3_fancywindow.cpp \
	../ui/aui_ctp2/c3_header.cpp \
	../ui/aui_ctp2/c3_headerswitch.cpp \
	../ui/aui_ctp2/c3_hypertextbox.cpp \
	../ui/aui_ctp2/c3_hypertipwindow.cpp \
	../ui/aui_ctp2/c3_icon.cpp \
	../ui/aui_ctp2/c3_image.cpp \
	../ui/aui_ctp2/c3_listbox.cpp \
	../ui/aui_ctp2/c3_listitem.cpp \
	../ui/aui_ctp2/c3_popupwindow.cpp \
	../ui/aui_ctp2/c3_radio.cpp \
	../ui/aui_ctp2/c3_ranger.cpp \
	../ui/aui_ctp2/c3_slidometer.cpp \
	../ui/aui_ctp2/c3_static.cpp \
	../ui/aui_ctp2/c3_switch.cpp \
	../ui/aui_ctp2/c3_thumb.cpp \
	../ui/aui_ctp2/c3_updateaction.cpp \
	../ui/aui_ctp2/c3_utilitydialogbox.cpp \
	../ui/aui_ctp2/c3blitter.cpp \
	../ui/aui_ctp2/c3dropdown.cpp \
	../ui/aui_ctp2/c3fancywindow.cpp \
	../ui/aui_ctp2/c3imageformats.cpp \
	../ui/aui_ctp2/c3listbox.cpp \
	../ui/aui_ctp2/c3memmap.cpp \
	../ui/aui_ctp2/c3scroller.cpp \
	../ui/aui_ctp2/C3slider.cpp \
	../ui/aui_ctp2/c3spinner.cpp \
	../ui/aui_ctp2/c3textfield.cpp \
	../ui/aui_ctp2/c3thumb.cpp \
	../ui/aui_ctp2/c3ui.cpp \
	../ui/aui_ctp2/c3window.cpp \
	../ui/aui_ctp2/c3windows.cpp \
	../ui/aui_ctp2/chart.cpp \
	../ui/aui_ctp2/checkbox.cpp \
	../ui/aui_ctp2/cityinventorylistbox.cpp \
	../ui/aui_ctp2/coloriconbutton.cpp \
	../ui/aui_ctp2/coloriconswitch.cpp \
	../ui/aui_ctp2/controlsheet.cpp \
	../ui/aui_ctp2/directvideo.cpp \
	../ui/aui_ctp2/grabitem.cpp \
	../ui/aui_ctp2/icon.cpp \
	../ui/aui_ctp2/iconbutton.cpp \
	../ui/aui_ctp2/iconswitch.cpp \
	../ui/aui_ctp2/icontab.cpp \
	../ui/aui_ctp2/InfoBar.cpp \
	../ui/aui_ctp2/iteminfo.cpp \
	../ui/aui_ctp2/keymap.cpp \
	../ui/aui_ctp2/keypress.cpp \
	../ui/aui_ctp2/linegraph.cpp \
	../ui/aui_ctp2/pattern.cpp \
	../ui/aui_ctp2/patternbase.cpp \
	../ui/aui_ctp2/picture.cpp \
	../ui/aui_ctp2/picturebutton.cpp \
	../ui/aui_ctp2/pictureswitch.cpp \
	../ui/aui_ctp2/picturetab.cpp \
	../ui/aui_ctp2/radarmap.cpp \
	../ui/aui_ctp2/radiogroup.cpp \
	../ui/aui_ctp2/SelItem.cpp \
	../ui/aui_ctp2/SelItemClick.cpp \
	../ui/aui_ctp2/SelItemEvent.cpp \
	../ui/aui_ctp2/staticpicture.cpp \
	../ui/aui_ctp2/statictextitem.cpp \
	../ui/aui_ctp2/statuswindow.cpp \
	../ui/aui_ctp2/textbox.cpp \
	../ui/aui_ctp2/textbutton.cpp \
	../ui/aui_ctp2/textradio.cpp \
	../ui/aui_ctp2/textswitch.cpp \
	../ui/aui_ctp2/texttab.cpp \
	../ui/aui_ctp2/thermometer.cpp \
	../ui/aui_ctp2/thronecontrol.cpp \
	../ui/aui_ctp2/thumbnailmap.cpp \
	../ui/aui_ctp2/tilecontrol.cpp \
	../ui/aui_ctp2/tipwindow.cpp \
	../ui/aui_ctp2/unittabbutton.cpp \
	../ui/aui_ctp2/videowindow.cpp \
	../gfx/tilesys/workmap.cpp \
	../ui/aui_ctp2/ctp2_button.cpp \
	../ui/aui_ctp2/ctp2_commandline.cpp \
	../ui/aui_ctp2/ctp2_dropdown.cpp \
	../ui/aui_ctp2/ctp2_hypertextbox.cpp \
	../ui/aui_ctp2/ctp2_listbox.cpp \
	../ui/aui_ctp2/ctp2_listitem.cpp \
	../ui/aui_ctp2/ctp2_Menu.cpp \
	../ui/aui_ctp2/ctp2_menubar.cpp \
	../ui/aui_ctp2/ctp2_MenuButton.cpp \
	../ui/aui_ctp2/ctp2_spinner.cpp \
	../ui/aui_ctp2/ctp2_Static.cpp \
	../ui/aui_ctp2/ctp2_Switch.cpp \
	../ui/aui_ctp2/ctp2_Tab.cpp \
	../ui/aui_ctp2/ctp2_TabButton.cpp \
	../ui/aui_ctp2/ctp2_TabGroup.cpp \
	../ui/aui_ctp2/ctp2_textbuffer.cpp \
	../ui/aui_ctp2/ctp2_textfield.cpp \
	../ui/aui_ctp2/ctp2_Window.cpp \
	../ui/interface/CityControlPanel.cpp \
	../ui/interface/DomesticControlPanel.cpp \
	../ui/interface/MessageControlPanel.cpp \
	../ui/interface/TilesControlPanel.cpp \
	../ui/interface/UnitControlPanel.cpp \
	../ui/interface/ControlTabPanel.cpp \
	../ui/interface/EndTurnButton.cpp \
	../ui/interface/MainControlPanel.cpp \
	../ui/interface/ShortcutPad.cpp \
	../ui/interface/StatusBar.cpp \
	../ui/interface/TurnYearStatus.cpp \
	../ui/interface/ZoomPad.cpp \
	../ui/interface/controlpanelwindow.cpp \
	../ui/interface/interfaceevent.cpp \
	../ui/interface/agesscreen.cpp \
	../ui/interface/ancientwindows.cpp \
	../ui/interface/armymanagerwindow.cpp \
	../ui/interface/AttractWindow.cpp \
	../ui/interface/backgroundwin.cpp \
	../ui/interface/c3dialogs.cpp \
	../ui/interface/chatbox.cpp \
	../ui/interface/CityEspionage.cpp \
	../ui/interface/citymanager.cpp \
	../ui/interface/creditsscreen.cpp \
	../ui/interface/cursormanager.cpp \
	../ui/interface/custommapscreen.cpp \
	../ui/interface/debugwindow.cpp \
	../ui/interface/DiplomacyDetails.cpp \
	../ui/interface/diplomacywindow.cpp \
	../ui/interface/dipwizard.cpp \
	../ui/interface/EditQueue.cpp \
	../ui/interface/FileDialog.cpp \
	../ui/interface/gameplayoptions.cpp \
	../ui/interface/graphicsresscreen.cpp \
	../ui/interface/graphicsscreen.cpp \
	../ui/interface/greatlibrary.cpp \
	../ui/interface/greatlibrary_util.cpp \
	../ui/interface/greatlibrarywindow.cpp \
	../ui/interface/helptile.cpp \
	../ui/interface/hotseatlist.cpp \
	../ui/interface/infowin.cpp \
	../ui/interface/initialplayscreen.cpp \
	../ui/interface/initialplaywindow.cpp \
	../ui/interface/intelligencewindow.cpp \
	../ui/interface/IntroMovieWin.cpp \
	../ui/interface/IntroMovieWindow.cpp \
	../ui/interface/km_screen.cpp \
	../ui/interface/loadsavemapscreen.cpp \
	../ui/interface/loadsavemapwindow.cpp \
	../ui/interface/loadsavescreen.cpp \
	../ui/interface/loadsavewindow.cpp \
	../ui/interface/MapCopyBuffer.cpp \
	../ui/interface/messageactions.cpp \
	../ui/interface/messageadvice.cpp \
	../ui/interface/messageeyepoint.cpp \
	../ui/interface/messageiconbutton.cpp \
	../ui/interface/messageiconwindow.cpp \
	../ui/interface/messagelist.cpp \
	../ui/interface/messagemodal.cpp \
	../ui/interface/messageresponse.cpp \
	../ui/interface/messagewin.cpp \
	../ui/interface/messagewindow.cpp \
	../ui/interface/musicscreen.cpp \
	../ui/interface/musictrackscreen.cpp \
	../ui/interface/optionsscreen.cpp \
	../ui/interface/optionswindow.cpp \
	../ui/interface/optionwarningscreen.cpp \
	../ui/interface/ProfileEdit.cpp \
	../ui/interface/progresswindow.cpp \
	../ui/interface/radarwindow.cpp \
	../ui/interface/scenarioeditor.cpp \
	../ui/interface/scenarioscreen.cpp \
	../ui/interface/scenariowindow.cpp \
	../ui/interface/sciencewin.cpp \
	../ui/interface/scorewarn.cpp \
	../ui/interface/screenutils.cpp \
	../ui/interface/soundscreen.cpp \
	../ui/interface/splash.cpp \
	../ui/interface/spnewgamediffscreen.cpp \
	../ui/interface/spnewgamemapshapescreen.cpp \
	../ui/interface/spnewgamemapsizescreen.cpp \
	../ui/interface/spnewgameplayersscreen.cpp \
	../ui/interface/spnewgamerandomcustomscreen.cpp \
	../ui/interface/spnewgamerulesscreen.cpp \
	../ui/interface/spnewgamescreen.cpp \
	../ui/interface/spnewgametribescreen.cpp \
	../ui/interface/spnewgamewindow.cpp \
	../ui/interface/spriteeditor.cpp \
	../ui/interface/spscreen.cpp \
	../ui/interface/spwindow.cpp \
	../ui/interface/statictextbox.cpp \
	../ui/interface/statswindow.cpp \
	../ui/interface/String_Search.cpp \
	../ui/interface/tileimptracker.cpp \
	../ui/interface/trademanager.cpp \
	../ui/interface/tutorialwin.cpp \
	../ui/interface/UIUtils.cpp \
	../ui/interface/unitmanager.cpp \
	../ui/interface/victorymoviewin.cpp \
	../ui/interface/victorymoviewindow.cpp \
	../ui/interface/victorywin.cpp \
	../ui/interface/victorywindow.cpp \
	../ui/interface/wondermoviewin.cpp \
	../ui/interface/wondermoviewindow.cpp \
	../ui/interface/WonderTab.cpp \
	../ui/interface/workwin.cpp \
	../ui/interface/workwindow.cpp \
	../ui/interface/InterfaceEventRegister.cpp \
	../ui/interface/CauseAndEffectTab.cpp \
	../ui/interface/DomesticManagementDialog.cpp \
	../ui/interface/GovernmentTab.cpp \
	../ui/interface/citywindow.cpp \
	../ui/interface/sci_advancescreen.cpp \
	../ui/interface/ScienceManagementDialog.cpp \
	../ui/interface/NationalManagementDialog.cpp \
	../ui/interface/MessageBoxDialog.cpp \
	../ui/interface/battle.cpp \
	../ui/interface/battleevent.cpp \
	../ui/interface/battleview.cpp \
	../ui/interface/battleviewwindow.cpp \
	../ui/interface/infowindow.cpp \
	../ui/interface/rankingtab.cpp \
	../ui/interface/scoretab.cpp \
	../ui/interface/timelinetab.cpp \
	../ui/interface/sciencevictorydialog.cpp \
	../ui/netshell/allinonewindow.cpp \
	../ui/netshell/connectionselectwindow.cpp \
	../ui/netshell/dialogboxwindow.cpp \
	../ui/netshell/gameselectwindow.cpp \
	../ui/netshell/lobbychangewindow.cpp \
	../ui/netshell/lobbywindow.cpp \
	../ui/netshell/netfunc.cpp \
	../ui/netshell/netshell.cpp \
	../ui/netshell/netshell_game.cpp \
	../ui/netshell/ns_aiplayer.cpp \
	../ui/netshell/ns_aiplayersetup.cpp \
	../ui/netshell/ns_chatbox.cpp \
	../ui/netshell/ns_civlistbox.cpp \
	../ui/netshell/ns_customlistbox.cpp \
	../ui/netshell/ns_game.cpp \
	../ui/netshell/ns_gamesetup.cpp \
	../ui/netshell/ns_gplayer.cpp \
	../ui/netshell/ns_header.cpp \
	../ui/netshell/ns_headerswitch.cpp \
	../ui/netshell/ns_improvements.cpp \
	../ui/netshell/ns_item.cpp \
	../ui/netshell/ns_lobby.cpp \
	../ui/netshell/ns_player.cpp \
	../ui/netshell/ns_playersetup.cpp \
	../ui/netshell/ns_rplayer.cpp \
	../ui/netshell/ns_server.cpp \
	../ui/netshell/ns_session.cpp \
	../ui/netshell/ns_spinner.cpp \
	../ui/netshell/ns_string.cpp \
	../ui/netshell/ns_transport.cpp \
	../ui/netshell/ns_tribes.cpp \
	../ui/netshell/ns_units.cpp \
	../ui/netshell/ns_window.cpp \
	../ui/netshell/ns_wonders.cpp \
	../ui/netshell/passwordscreen.cpp \
	../ui/netshell/playereditwindow.cpp \
	../ui/netshell/playerselectwindow.cpp \
	../ui/netshell/serverselectwindow.cpp \
	../ui/slic_debug/segmentlist.cpp \
	../ui/slic_debug/sourcelist.cpp \
	../ui/slic_debug/watchlist.cpp \
	../sound/civsound.cpp \
	../sound/gamesounds.cpp \
	../sound/soundevent.cpp \
	../sound/soundmanager.cpp \
	../ai/diplomacy/counterresponseevent.cpp \
	../ai/diplomacy/dstateevent.cpp \
	../ai/diplomacy/motivationevent.cpp \
	../ai/diplomacy/nproposalevent.cpp \
	../ai/diplomacy/proposalresponseevent.cpp \
	../ai/diplomacy/ReactEvent.cpp \
	../ai/diplomacy/regardevent.cpp \
	../ai/diplomacy/RejectResponseEvent.cpp \
	../ai/diplomacy/ResponseEvent.cpp \
	../ai/diplomacy/sstateevent.cpp \
	../ai/diplomacy/threatresponseevent.cpp \
	../ai/diplomacy/agreementmatrix.cpp \
	../ai/diplomacy/diplomacyutil.cpp \
	../ai/diplomacy/diplomat.cpp \
	../ai/diplomacy/diplomattypes.cpp \
	../ai/diplomacy/foreigner.cpp \
	../ai/diplomacy/proposalanalysis.cpp \
	../ai/strategy/scheduler/Plan.cpp \
	../ai/strategy/scheduler/scheduler.cpp \
	../ai/strategy/goals/ctpgoal.cpp \
	../ai/strategy/goals/Goal.cpp \
	../ai/strategy/squads/Squad.cpp \
	../ai/strategy/squads/squad_Strength.cpp \
	../ai/strategy/agents/agent.cpp \
	../ai/strategy/agents/ctpagent.cpp \
	../ai/mapanalysis/boundingrect.cpp \
	../ai/mapanalysis/mapanalysis.cpp \
	../ai/mapanalysis/settlemap.cpp \
	../ai/CityManagement/governor.cpp \
	../ai/ctpai.cpp \
	../ai/ctpaidebug.cpp

ctp2_LDADD = \
	../gs/newdb/libgsnewdb.la \
	../gs/slic/libgsslic.la \
	$(CTP2_LDFLAGS)

AM_CFLAGS=\
	$(CTP2_CFLAGS)

AM_CXXFLAGS=\
	$(CTP2_CXXFLAGS)

AM_CPPFLAGS=\
	$(CTP2_CPPFLAGS)

